Added in skeletons for the actions module...
